Support pre-signed URLs
